--- a/app-style.css
+++ b/app-style.css
@@ -610,7 +610,6 @@ body {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
-    background-color: linear-gradient(to right, #3b88d4, #21c0e7);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     overflow: hidden;
@@ -634,7 +633,7 @@ body {
     border: 1px solid #000000;
     text-align: center;
     border-collapse: collapse;
-    background: linear-gradient(to right, #076152, #045164);
+    background: #2F4F4F;
 }
 
 .checklist-table tr:hover {
