--- a/app-style.css
+++ b/app-style.css
@@ -631,7 +631,8 @@ body {
     border: 1px solid #000000;
     text-align: center;
     border-collapse: collapse;
-    background: #2F4F4F;
+    background: #ffffff;
+    color: #000000;
 }
 
 .checklist-table tr:hover {
@@ -665,16 +666,17 @@ tr[data-step-number="1"] .step-title,
 }
 
 .completed-step .important-text {
-    color: #28a808;
+    background: #28a808;
 }
 
 .completed-step td {
-    color: #4bb306a6;
     text-decoration: line-through;
+    background: #28a808;
 }
 
 .completed-step .step-title {
     text-decoration: line-through;
+    background: #28a808;
 }
 
 .amadeus-content p,
