--- a/app-style.css
+++ b/app-style.css
@@ -384,7 +384,7 @@ body {
 }
 
 #ETG\ Voice\ Scripts-nav{
-    background: #b98c49;
+    background: #03a67a;
 }
 
 #ETG\ Voice\ Scripts-nav.active{
